test/expected/typedef_i+.out
typedef int S::Int
            ^
13: error: typedef names can not be scoped; use: namespace S { typedef ... }
